--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sass style.scss style.css",
-    "watch": "sass --watch style.scss style.css"
+    "build": "sass ./styles/main.scss style.css",
+    "watch": "sass --watch ./styles/main.scss style.css"
   },
   "repository": {
     "type": "git",
